added stories, post

--- a/package.json
+++ b/package.json
@@ -18,6 +18,18 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@auth0/auth0-angular": "^2.2.3",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.7",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.1",
+    "@editorjs/list": "^2.0.2",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/raw": "^2.5.1",
+    "@rxpm/editor-js-code": "^0.0.1",
+    "@tltoulson/editorjs-codemirror": "^0.1.2",
+    "axios": "^1.7.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
